# VeriRAG

./: .gitignore  LICENSE  README.md  docker-compose.yml  pom.xml  setup-topics.sh
docs/: README_old_architecture.md
python-ml/: config.py  conftest.py  env.example  pyproject.toml  requirements.txt
python-ml/agents/: agent_coordinator.py  base_agent.py  behavior_analyst.py  feedback_embedder.py  geographic_analyst.py  pattern_detector.py  rag_retriever.py  risk_assessor.py  temporal_analyst.py
python-ml/api/: __init__.py  server.py
python-ml/consumers/: inference_consumer.py
python-ml/features/: engineer.py
python-ml/models/: schemas.py
python-ml/monitoring/: dashboard.py
python-ml/tests/agents/: test_agents.py
python-ml/tests/api/: test_endpoints.py
python-ml/training/: online_learner.py  train_xgboost.py
python-ml/utils/: __init__.py  pipeline_utils.py
src/main/java/com/agenticfraud/engine/controllers/: ConversationalController.java  FraudDetectionController.java
src/main/java/com/agenticfraud/engine/models/: AgentInsight.java  CustomerProfile.java  EnrichedTransaction.java  FraudDecision.java  Transaction.java
src/main/java/com/agenticfraud/engine/streaming/: FraudStreams.java
src/main/resources/: application.yml
src/test/java/com/agenticfraud/engine/testing/: TestDataGenerator.java
